--- a/README.mkd
+++ b/README.mkd
@@ -36,6 +36,6 @@ Write something, please.
 + Hello World. April 8th, bowen  
 + Hello World too. April 8th, LeeAbner
 + GOT IT! April 8th, Otto Mao
-+ It's rainy,today.April 9th.Rong Renyuan	
++ what a fucking rainy day,today.April 9th.Rong Renyuan	
 + 试试中文..这里可以版聊了.. , April 9th, Otto Mao
 
