--- a/README.mkd
+++ b/README.mkd
@@ -36,7 +36,8 @@ Write something, please.
 + Hello World. April 8th, bowen  
 + Hello World too. April 8th, LeeAbner
 + GOT IT! April 8th, Otto Mao
-It's rainy,today.April 9th.Rong Renyuan	
+- It's <b>Otto</b>'s practice of [markdown](http://daringfireball.net/projects/markdown/) language and mixed HTML
+- It's rainy,today.April 9th.Rong Renyuan	
 new branch by rongrenyuan
 试试中文..这里可以版聊了.. , April 9th, Otto Mao
 我好像改的墨墨迹迹的了。。April 9 th,Rongrenyuan
