--- a/README.mkd
+++ b/README.mkd
@@ -37,6 +37,8 @@ Write something, please.
 + Hello World too. April 8th, LeeAbner
 + GOT IT! April 8th, Otto Mao
 + Hello World, April 11th, Liumuqing
++ Hello World, April 12th,Duyue
+
 
 It's rainy,today.April 9th.Rong Renyuan	
 - It's <b>Otto</b>'s practice of [markdown](http://daringfireball.net/projects/markdown/) language and mixed HTML
