--- a/README.mkd
+++ b/README.mkd
@@ -38,12 +38,10 @@ Write something, please.
 + GOT IT! April 8th, Otto Mao
 + Hello World, April 11th, Liumuqing
 + Hello World, April 12th,Duyue
-
-
-It's rainy,today.April 9th.Rong Renyuan	
++ It's rainy,today.April 9th.Rong Renyuan	
 - It's <b>Otto</b>'s practice of [markdown](http://daringfireball.net/projects/markdown/) language and mixed HTML
 - It's rainy,today.April 9th.Rong Renyuan	
-new branch by rongrenyuan
-ÎÒºÃÏñ¸ÄµÄÄ«Ä«¼£¼£µÄÁË¡£¡£April 9 th,Rongrenyuan
++ new branch by rongrenyuan
++ ï¿½Òºï¿½ï¿½ï¿½ï¿½Äµï¿½Ä«Ä«ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ë¡ï¿½ï¿½ï¿½April 9 th,Rongrenyuan
 + Hello World. April 9, Tank
 
