add one line in ./README.mkd

--- a/README.mkd
+++ b/README.mkd
@@ -54,3 +54,4 @@ new branch by rongrenyuan
 + I have forked a new branch! By zhaoyusu
 +i'll have a test later...April 11th,DUyue
 + hello everybody. April 11th, napu
++ git exercise . April 11th , Gong Wenjuan
