add one line in ./README.mkd

--- a/README.mkd
+++ b/README.mkd
@@ -49,3 +49,4 @@ Write something, please.
 +i'll have a test later...April 11th,DUyue
 + hello everybody. April 11th, napu
 + git exercise . April 11th , Gong Wenjuan
++ a new branch "gongwenjuan". April 11th, Gong Wenjuan
