add sth. in README.mkd

--- a/README.mkd
+++ b/README.mkd
@@ -50,3 +50,4 @@ Write something, please.
 + hello everybody. April 11th, napu
 + git exercise . April 11th , Gong Wenjuan
 + a new branch "gongwenjuan". April 11th, Gong Wenjuan
++ hello new branch. April 11th . chenxm
