--- a/README.mkd
+++ b/README.mkd
@@ -53,4 +53,4 @@ Write something, please.
 + hello world. April 11th, chenxm
 + hello new branch. April 11th . chenxm
 + git sucks. April 11th. Brian
-+ WO XI HUAN andy
++ WO XI HUAN hehe   andy
