--- a/README.mkd
+++ b/README.mkd
@@ -54,4 +54,5 @@ Write something, please.
 + hello new branch. April 11th . chenxm
 + git sucks. April 11th. Brian
 + WO XI HUAN hehe   andy
-+ I am xuan chen,hello!
++ I am zhao xuan chen,hello!!!!
++ pretty well!
