--- a/README.mkd
+++ b/README.mkd
@@ -55,4 +55,4 @@ Write something, please.
 + git sucks. April 11th. Brian
 + WO XI HUAN hehe   andy
 + I am zhao xuan chen,hello!!!!
-+ pretty well!
++ hello word!done
