--- a/README.mkd
+++ b/README.mkd
@@ -56,4 +56,4 @@ Write something, please.
 + WO XI HUAN hehe   andy
 + I am zhao xuan chen,hello!!!!
 + hello word!done
-+ something --jimmyxu
++ something- - --jimmyxu
