Add a line in README.mkd by crayon_z

--- a/README.mkd
+++ b/README.mkd
@@ -58,3 +58,4 @@ Write something, please.
 + hello word!done
 + I am wanghaiyang. Hello world.
 + something= - --jimmyxu
++ Hello git world, April 12th, crayon_z
