Add a line in README.mkd in another proj to test conflict by crayon_z

--- a/README.mkd
+++ b/README.mkd
@@ -59,3 +59,4 @@ Write something, please.
 + I am wanghaiyang. Hello world.
 + something= - --jimmyxu
 + Hello git world, April 12th, crayon_z
++ Hello another git conflict world, April 12th, crayon_z
