Update the slides. - Remove "send me your SSH public key" session. In github and GitLab,   users can manage their own SSH keys. The administrators need NO SSH   key management any longer. - Add a link in the branch section, which points to the remote   management of git repos.

--- a/git_beamer.tex
+++ b/git_beamer.tex
@@ -512,6 +512,8 @@ A branch-based development flow:
    \item
      Force delete a branch
    \end{itemize}
+\item
+   Manage \hyperlink{gitremote}{remote} branches
 \end{itemize}
 \end{frame}
 
@@ -764,10 +766,6 @@ history.
   Set up git on your computer, and sign up a github account.
 \item
   Initialize a local project as git repo, make your first git.
-\item
-  Email your SSH public key file as an attachment to
-  \href{mailto:weijianwen@sjtu.edu.cn}{me}. Name your pubkey file after
-  ``YOUR@EMAIL.pub'', e.g., you should rename your \texttt{id\_rsa.pub}
   to \texttt{xxx@sjtu.edu.cn.pub} and send it to me.
 \end{enumerate}
 \end{frame}
