Update the slides. - Change the way of saying hello on github. No need to follow me now.   Instead, open an issue on the project homepage.

--- a/git_beamer.tex
+++ b/git_beamer.tex
@@ -795,8 +795,9 @@ Be familiar with \texttt{status}, \texttt{add}, \texttt{commit},
 
 \begin{enumerate}[1.]
 \item
-  Follow \href{https://github.com/weijianwen}{me} on github.\footnote{Please
-    feel free to unfollow me when finishing all the required exercises.}
+  Open an issue in
+  \href{https://github.com/weijianwen/GitForBeginners/issues}{GitForBeginners}
+  to say hello.
 \item
   I will add you as a collaborator. Please wait for my message on github
   before proceeding to next step.
