--- a/README.mkd
+++ b/README.mkd
@@ -61,3 +61,4 @@ Write something, please.
 + remote branch wanghaiyang
 + Hello git world, April 12th, crayon_z
 + Hello another git conflict world, April 12th, crayon_z
++ Here is a conflict
