--- a/README.mkd
+++ b/README.mkd
@@ -64,3 +64,4 @@ Write something, please.
 + Here is a conflict
 + Here is another conflict
 + Hello World.April 14th Zhao Yang
++ Sth -- by JackWindows
