--- a/README.mkd
+++ b/README.mkd
@@ -65,4 +65,4 @@ Write something, please.
 + Here is another conflict
 + Hello World.April 14th Zhao Yang
 + Sth -- by JackWindows 2
-+ Sorry,I am late.April 16th Xing Jianan
++ Sorry,I am late.April 16th by Xing Jianan
