--- a/git_beamer.tex
+++ b/git_beamer.tex
@@ -765,8 +765,7 @@ history.
 \item
   Set up git on your computer, and sign up a github account.
 \item
-  Initialize a local project as git repo, make your first git.
-  to \texttt{xxx@sjtu.edu.cn.pub} and send it to me.
+  Initialize a local project as git repo, make your first commit to git.
 \end{enumerate}
 \end{frame}
 
