--- a/README.mkd
+++ b/README.mkd
@@ -67,3 +67,4 @@ Write something, please.
 + Sth -- by JackWindows 2
 + Sorry,I am late.April 16th by Xing Jianan
 + I am so late to do this,Xing Jianan
++ I am liuyukun,I am doing the exercise 4 of GitForBeginners
