new branch yyj,edit README.mkd

--- a/README.mkd
+++ b/README.mkd
@@ -69,3 +69,4 @@ Write something, please.
 + I am so late to do this,Xing Jianan
 + I am liuyukun,I am doing the exercise 4 of GitForBeginners
 + I am liuyukun,I am doing the exercise 6 of GitForBeginners
++ yyj
