--- a/README.mkd
+++ b/README.mkd
@@ -71,3 +71,4 @@ Write something, please.
 + I am liuyukun,I am doing the exercise 6 of GitForBeginners
 + yyj again
 + Exercises 7,yyj
++ mark for ex4. 2012.7.24 by CYP
