--- a/README.mkd
+++ b/README.mkd
@@ -73,3 +73,5 @@ Write something, please.
 + Exercises 7,yyj
 + mark for ex4. 2012.7.24 by CYP
 + test conflict...
++ exercise4,masai
+masai is doing exercise 6
