wangyaoxuan:proj_B test

--- a/README.mkd
+++ b/README.mkd
@@ -81,3 +81,4 @@ Write something, please.
 + wangyaoxuan.guim
 + in 'wangyaoxuan' branch
 + wangyaoxuan:homework is finished. 
++ wangyaoxuan:proj_B testing..
