Leave your email on the github homepage.

--- a/git_beamer.tex
+++ b/git_beamer.tex
@@ -812,6 +812,8 @@ Use \texttt{stash}, \texttt{checkout} to do time travel.
 
 \begin{enumerate}[1.]
 \item
+  Register a github account and leave your email address public on your homepage.
+\item
   Open an issue in
   \href{https://github.com/weijianwen/GitForBeginners/issues}{GitForBeginners}
   to say hello.
