committed by Jingyang

--- a/README.mkd
+++ b/README.mkd
@@ -59,3 +59,4 @@ Write something, please.
 + Happy, July 12th . chenhao
 + Nice Day, July 13th . liyingkai
 + haha~~ finish! ,July 23th(American time),Bowen
++ Have a nice day! August 15th, Jingyang
