Double-check the mkd and generted PDF file. Say goodbye to the handcrafted git_beamer files.

--- a/README.mkd
+++ b/README.mkd
@@ -34,6 +34,7 @@ TODO
 + Where is the TT font?
 + Use definition list instead of bulleted list.
 + Handle the footnotes.
++ Add ```git show```
 
 Draft Area
 ======
