--- a/README.mkd
+++ b/README.mkd
@@ -39,7 +39,7 @@ Draft Area
 ======
 
 Write something, please.
-+ hello, just try Lixin Yao
++ hello, just try, 9/13 Lixin Yao
 + fine,July 27th,guangsheng
 + Have a nice summer vacation. June 15th, Yansong
 + Have a nice day. April 5th, Jianwen
