--- a/README.mkd
+++ b/README.mkd
@@ -39,6 +39,7 @@ Draft Area
 ======
 
 Write something, please.
++ Hello, this is my first try. October 8th, By Zhang Bin
 + hello, just try, 9/13 Lixin Yao
 + fine,July 27th,guangsheng
 + Have a nice summer vacation. June 15th, Yansong
