--- a/README.mkd
+++ b/README.mkd
@@ -65,3 +65,4 @@ Write something, please.
 + Nice Day, July 13th . liyingkai
 + haha~~ finish! ,July 23th(American time),Bowen
 + Have a nice day! August 15th, Jingyang
++ hello world,finished. Octorber 10th, Zhang Yiwei
