--- a/README.mkd
+++ b/README.mkd
@@ -1,3 +1,4 @@
+hello git , from wangjieyi 2013,11,14
 This is the project GitForBeginners. It aims to assist the newbie to learn and use git.
 
 Sorry I just got too tired to write more words on this README file. Please read through the [git_beamer.pdf](https://github.com/weijianwen/GitForBeginners/blob/master/git_beamer.pdf?raw=true) and finish the exercises.
