--- a/README.mkd
+++ b/README.mkd
@@ -39,7 +39,7 @@ Draft Area
 ======
 
 Write something, please.
-Hello git,from wangjieyi.2013.11.14
++ Hello git,from wangjieyi.2013.11.14
 + Hello from new branch. I am Li Huaxin.Nov,1st,2013
 + Hello, I'm Zhang Honglun, Oct 15th,2013
 + Hello, this is my first try. October 8th, By Zhang Bin
